build_log_ui_clean.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\TransactionResultActivity.java:151: error: cannot find symbol
                 Intent i = new Intent(this, PurchaseAmountActivity.class);
                                             ^
  symbol:   class PurchaseAmountActivity
  location: class TransactionResultActivity
Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\TransactionResultActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\TransactionResultActivity.java:151: error: cannot find symbol
                   Intent i = new Intent(this, PurchaseAmountActivity.class);
                                               ^
    symbol:   class PurchaseAmountActivity
    location: class TransactionResultActivity
  Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\TransactionResultActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
19 actionable tasks: 1 executed, 18 up-to-date
